fixing the alignment on the subscribe-newsletter-mostread section

--- a/bootstrap/css/index.css
+++ b/bootstrap/css/index.css
@@ -48,7 +48,7 @@ figcaption h2 a{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  border-bottom: 
+  border-bottom:
 }
 
 .date{
@@ -130,4 +130,8 @@ figcaption h2 a{
     align-items: center
 
   }
+}
+
+body > div > div.mt-3.row.mt-5 > div:nth-child(1) {
+  background-color: #f4f5f6;
 }
